Quick AI updates with real info

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
     <meta name="robots" content="index, follow" />
     <meta
       name="description"
-      content="Premium car detailing services: washes, polishing, paint correction, ceramic coating, and interior restoration. Book with Car Detailer Pro."
+      content="Premium mobile car detailing services in Rochester, NY area: washes, polishing, paint correction, ceramic coating, and interior restoration. We come to you! Book with Carmicheal's Elite Mobile Detailing."
     />
-    <meta name="author" content="Car Detailer Pro" />
-    <link rel="canonical" href="https://cardetailerpro.com/" />
+    <meta name="author" content="Carmicheal's Elite Mobile Detailing" />
+    <link rel="canonical" href="https://carmichealselite.com/" />
 
     <!-- Preconnect for Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -26,27 +26,30 @@
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Car Detailer Pro" />
+    <meta
+      property="og:site_name"
+      content="Carmicheal's Elite Mobile Detailing"
+    />
     <meta
       property="og:title"
-      content="Car Detailer Pro | Premium Car Detailing Services"
+      content="Carmicheal's Elite Mobile Detailing | Premium Mobile Car Detailing Services"
     />
     <meta
       property="og:description"
-      content="Professional car detailing: exterior/interior, paint correction, ceramic coating. Serving your vehicle with care."
+      content="Professional mobile car detailing in Rochester, NY area: exterior/interior, paint correction, ceramic coating. We come to you! Serving your vehicle with care."
     />
-    <meta property="og:url" content="https://cardetailerpro.com/" />
+    <meta property="og:url" content="https://carmichealselite.com/" />
     <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Car Detailer Pro | Premium Car Detailing Services"
+      content="Carmicheal's Elite Mobile Detailing | Premium Mobile Car Detailing Services"
     />
     <meta
       name="twitter:description"
-      content="Professional car detailing: exterior/interior, paint correction, ceramic coating. Book now."
+      content="Professional mobile car detailing in Rochester, NY area: exterior/interior, paint correction, ceramic coating. We come to you! Book now."
     />
     <meta name="twitter:image" content="%PUBLIC_URL%/logo512.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -66,21 +69,27 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Car Detailer Pro | Premium Car Detailing Services</title>
+    <title>
+      Carmicheal's Elite Mobile Detailing | Premium Mobile Car Detailing
+      Services
+    </title>
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "AutomotiveBusiness",
-        "name": "Car Detailer Pro",
-        "url": "https://cardetailerpro.com/",
+        "name": "Carmicheal's Elite Mobile Detailing",
+        "url": "https://carmichealselite.com/",
         "image": "%PUBLIC_URL%/logo512.png",
-        "telephone": "555-555-5555",
-        "email": "email@email.com",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "123 Detail Street"
+        "telephone": "+1-585-507-7146",
+        "email": "carmichaelelite25@gmail.com",
+        "description": "Mobile car detailing services in Rochester, NY area - we come to you!",
+        "serviceType": "Mobile Car Detailing",
+        "areaServed": {
+          "@type": "City",
+          "name": "Rochester",
+          "addressRegion": "NY"
         }
       }
     </script>
