--- a/public/index.html
+++ b/public/index.html
@@ -58,8 +58,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!-- Preload hero image for faster LCP -->
-    <link rel="preload" as="image" href="%PUBLIC_URL%/Images/buffing.jpg" />
+    <!-- Preload hero videos for faster loading -->
+    <link rel="preload" as="video" href="%PUBLIC_URL%/Video/hero1.mp4" />
+    <link rel="preload" as="video" href="%PUBLIC_URL%/Video/hero2.mp4" />
+    <link rel="preload" as="video" href="%PUBLIC_URL%/Video/hero3.mp4" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
