Ensure carmichael is spelled correctly & fixed background of vehicle selector

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
     <meta name="robots" content="index, follow" />
     <meta
       name="description"
-      content="Premium mobile car detailing services in Rochester, NY area: washes, polishing, paint correction, ceramic coating, and interior restoration. We come to you! Book with Carmicheal's Elite Mobile Detailing."
+      content="Premium mobile car detailing services in Rochester, NY area: washes, polishing, paint correction, ceramic coating, and interior restoration. We come to you! Book with Carmichael's Elite Mobile Detailing."
     />
-    <meta name="author" content="Carmicheal's Elite Mobile Detailing" />
-    <link rel="canonical" href="https://carmichealselite.com/" />
+    <meta name="author" content="Carmichael's Elite Mobile Detailing" />
+    <link rel="canonical" href="https://carmichaelselite.com/" />
 
     <!-- Preconnect for Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -28,24 +28,24 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:site_name"
-      content="Carmicheal's Elite Mobile Detailing"
+      content="Carmichael's Elite Mobile Detailing"
     />
     <meta
       property="og:title"
-      content="Carmicheal's Elite Mobile Detailing | Premium Mobile Car Detailing Services"
+      content="Carmichael's Elite Mobile Detailing | Premium Mobile Car Detailing Services"
     />
     <meta
       property="og:description"
       content="Professional mobile car detailing in Rochester, NY area: exterior/interior, paint correction, ceramic coating. We come to you! Serving your vehicle with care."
     />
-    <meta property="og:url" content="https://carmichealselite.com/" />
+    <meta property="og:url" content="https://carmichaelselite.com/" />
     <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Carmicheal's Elite Mobile Detailing | Premium Mobile Car Detailing Services"
+      content="Carmichael's Elite Mobile Detailing | Premium Mobile Car Detailing Services"
     />
     <meta
       name="twitter:description"
@@ -72,7 +72,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-      Carmicheal's Elite Mobile Detailing | Premium Mobile Car Detailing
+      Carmichael's Elite Mobile Detailing | Premium Mobile Car Detailing
       Services
     </title>
 
@@ -81,8 +81,8 @@
       {
         "@context": "https://schema.org",
         "@type": "AutomotiveBusiness",
-        "name": "Carmicheal's Elite Mobile Detailing",
-        "url": "https://carmichealselite.com/",
+        "name": "Carmichael's Elite Mobile Detailing",
+        "url": "https://carmichaelselite.com/",
         "image": "%PUBLIC_URL%/logo512.png",
         "telephone": "+1-585-507-7146",
         "email": "carmichaelelite25@gmail.com",
