--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       content="Premium mobile car detailing services in Rochester, NY area: washes, polishing, paint correction, ceramic coating, and interior restoration. We come to you! Book with Carmichael's Elite Mobile Detailing."
     />
     <meta name="author" content="Carmichael's Elite Mobile Detailing" />
-    <link rel="canonical" href="https://carmichaelselite.com/" />
+    <link rel="canonical" href="https://carmichaelselitemobiledetailing.com/" />
 
     <!-- Preconnect for Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -38,7 +38,10 @@
       property="og:description"
       content="Professional mobile car detailing in Rochester, NY area: exterior/interior, paint correction, ceramic coating. We come to you! Serving your vehicle with care."
     />
-    <meta property="og:url" content="https://carmichaelselite.com/" />
+    <meta
+      property="og:url"
+      content="https://carmichaelselitemobiledetailing.com/"
+    />
     <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
 
     <!-- Twitter -->
@@ -82,7 +85,7 @@
         "@context": "https://schema.org",
         "@type": "AutomotiveBusiness",
         "name": "Carmichael's Elite Mobile Detailing",
-        "url": "https://carmichaelselite.com/",
+        "url": "https://carmichaelselitemobiledetailing.com/",
         "image": "%PUBLIC_URL%/logo512.png",
         "telephone": "+1-585-507-7146",
         "email": "carmichaelelite25@gmail.com",
