--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "AutomotiveBusiness",
+        "@type": "AutoDetailing",
         "name": "Carmichael's Elite Mobile Detailing",
         "url": "https://carmichaelselitemobiledetailing.com/",
         "image": "%PUBLIC_URL%/logo512.png",
@@ -131,9 +131,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
-     
-    </div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
